# NucleoidMC

./: README.md  requirements.txt
.github/workflows/: update-contributors.yml
art/: credits.md
contributors/: .gitignore  README.template.md  build-readme.py  common.py  config.json  fetch-contributors-discord.py  pyproject.toml
scripts/: update-contributors.sh
